fix submenu jump

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -10,6 +10,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  padding-right: 0 !important;
+  overflow: unset !important;
 }
 
 #root,
